--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "firebase": "^9.17.1",
     "firebaseui": "^6.0.2",
     "react": "^17.0.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.0",
     "react-firebaseui": "^6.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -50,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-transition-group": "^4.4.5"
   }
 }
