--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todo-list",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lobanovandrey.github.io/todo-list-react/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
@@ -18,6 +19,7 @@
     "classnames": "^2.3.2",
     "firebase": "^9.17.1",
     "firebaseui": "^6.0.2",
+    "gh-pages": "^5.0.0",
     "react": "^17.0.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.0",
@@ -33,7 +35,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
